k8s/base/components/redis/redis-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-db
spec:
  serviceName: "redis-db"
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
      annotations:
        linkerd.io/inject: enabled
        config.linkerd.io/opaque-ports: "6379"
    spec:
      containers:
      - name: redis
        image: redis:alpine
        command: ["redis-server", "--appendonly", "yes", "--protected-mode", "no", "--bind", "0.0.0.0"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
