k8s/base/components/redis/redis-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: redis-access-policy
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: redis-server
  requiredAuthenticationRefs:
    - name: api-auth-mtls
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
